fixed spacing bug

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -96,6 +96,9 @@ a:hover {
   align-items: center;
   display: flex;
 }
+.left {
+  padding-left: 0;
+}
 .space {
   margin-bottom: 45px;
 }
